image blur + image stretching [fixed]

--- a/css/general.css
+++ b/css/general.css
@@ -10,7 +10,7 @@
 **body . . . . . . . Sets Page Attributes
 **sidebar  . . . . . (Or topbar if on mobile)
 **main-content . . . Everything but Sidebar 
-**canvas . . . . . . That thing that shows animations
+**learn-screen . . . The canvas that shows animations
 
 *TOOLS
 **main-font  . . . . Default pixel font
@@ -120,15 +120,10 @@ body {
     bottom:0%;
     left:0%;
     right:0%;
-    
-    z-index: 300 !important;
-    
-    width: 100%;
-    height: 100%;
 
-    /*pointer-events: none;
+    pointer-events: none;
     z-index: 100 !important;
-    image-rendering: crisp-edges;*/
+    image-rendering: crisp-edges;
 }
 
 /*canvas {
